--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="readings_views">#000</color>
+    <color name="table_background">#000000</color>
+    <color name="header_table_background">#549fd9</color>r>
+    <color name="content_table_background">#ffffff</color>
 </resources>
