--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_weight">0.50</item>
-    </style>
+    </style>`
 
     <style name="LoginFormContainer">
         <item name="android:layout_width">350dp</item>
