--- a/app/src/main/res/layout/activity_detail_dialog.xml
+++ b/app/src/main/res/layout/activity_detail_dialog.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Spinner
-        android:layout_width="wrap_content"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="40dp">
+
+    <ImageView
+        android:id="@+id/iv_Sp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"/>
+        android:src="@drawable/ic_action_sp_activities"/>
+
+    <Spinner
+        android:layout_width="385dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"/>
+
+    <ImageView
+        android:id="@+id/iv_Hours"
+        android:layout_width="50dp"
+        android:src="@drawable/ic_action_hours_activities"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="30dp"/>
 
     <SeekBar
-        android:layout_width="300dp"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:id="@+id/sbHoras"
         android:layout_below="@+id/spinner"
-        android:max="10"/>
+        android:max="10"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:text="0"
         android:id="@+id/tvHoras"
-        android:layout_below="@+id/sbHoras"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp"/>
+        android:layout_below="@+id/spinner"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:textSize="25dp"
+        android:layout_marginTop="30dp"/>
 </RelativeLayout>
